# libtorch_test

./: CMakeLists.txt  README.md  main.cpp  obs.txt
src/handsome_test/: CMakeLists.txt  main.cpp  obs_test.txt  package.xml
